[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pyairtable>=3.1.1",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "ta>=0.11.0",
]
